--- a/App/index.html
+++ b/App/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>elm playground</title>
+    <title>elm magic mirror</title>
     <script src="build/bundle.js" charset="utf-8"></script>
     <link rel="stylesheet" href="vendor/bootstrap.min.css">
     <link rel="stylesheet" href="https://bootswatch.com/darkly/bootstrap.min.css">
